--- a/7.12/rmq-deployment.yml
+++ b/7.12/rmq-deployment.yml
@@ -14,13 +14,14 @@ spec:
     spec:
       containers:
         - name: rmq
-          image: rabbitmq:3.13.7
+          image: rabbitmq:3.13.7-management
           ports:
             - containerPort: 5672
+            - containerPort: 15672
           env:
-            - name: SEED_USERNAME
+            - name: RABBITMQ_DEFAULT_USER
               value: rmq
-            - name: SEED_USER_PASSWORD
+            - name: RABBITMQ_DEFAULT_PASS
               value: rmq
           resources:
             limits:
