--- a/9.10/conv-api-secret.yml
+++ b/9.10/conv-api-secret.yml
@@ -7,4 +7,5 @@ data:
   AMQP_EXCHANGE: Y29udmNoYW5nZQ==
   AMQP_USER: cm1x
   AMQP_PASSWORD: cm1x
-  AMQP_HOSTNAME: Y29udi1hcHAtY2x1c3Rlci1pcA==
+  AMQP_HOSTNAME: cm1xLWNsdXN0ZXItaXA=
+  AMQP_QUEUE: Y29vbC1xdWV1ZQ==
