--- a/9.10/conv-app-deployment.yml
+++ b/9.10/conv-app-deployment.yml
@@ -15,6 +15,12 @@ spec:
       containers:
         - name: conv-app
           image: antonlarichev/conv-app:1.2
+          env:
+            - name: VITE_DOMAIN
+              valueFrom:
+                configMapKeyRef:
+                  name: app-config
+                  key: VITE_DOMAIN
           ports:
             - containerPort: 80
           resources:
