--- a/9.10/converter-deployment.yml
+++ b/9.10/converter-deployment.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: conv-api-deployment
+  name: converter-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      components: backend
+      components: converter
   template:
     metadata:
       labels:
-        components: backend
+        components: converter
     spec:
       containers:
-        - name: conv-api
-          image: antonlarichev/short-api:v1.0
+        - name: converter
+          image: antonlarichev/conv-service:1.0
           ports:
-            - containerPort: 3000
+            - containerPort: 3002
           env:
             - name: AMQP_EXCHANGE
               valueFrom:
@@ -37,15 +37,13 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: conv-api-secret
-                  key: AMQP_HOSTNAME                                                      
+                  key: AMQP_HOSTNAME
+            - name: AMQP_QUEUE
+              valueFrom:
+                secretKeyRef:
+                  name: conv-api-secret
+                  key: AMQP_QUEUE                                                      
           resources:
             limits:
-              memory: "450Mi"
-              cpu: "350m"
-          volumeMounts:
-            - name: conv-api-pvc
-              mountPath: /opt/app/uploads
-      volumes:
-        - name: conv-api-pvc
-          persistentVolumeClaim:
-            claimName: conv-api-pvc
+              memory: "100Mi"
+              cpu: "100m"
